unpackaged/main/default/objects/UniqueEntry__DynamicTrigger__c/UniqueEntry__DynamicTrigger__c.object-meta.xml
<CustomObject>
    <label>DynamicTrigger</label>
    <nameField>
        <displayFormat>RLD-{00000}</displayFormat>
        <label>DynamicTrigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DynamicTriggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>