unpackaged/main/default/objects/UniqueEntry__DynamicTrigger__c/fields/UniqueEntry__Flow_Response__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Flow_Response__c</fullName>
    <label>Flow_Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>