unpackaged/main/default/objects/UniqueEntry__DynamicTrigger__c/fields/UniqueEntry__Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Flow_URL__c</fullName>
    <label>Flow_URL</label>
    <type>TextArea</type>
</CustomField>