unpackaged/main/default/objects/UniqueEntry__DynamicTrigger__c/fields/UniqueEntry__Status__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>