unpackaged/main/default/objects/UniqueEntry__DynamicTrigger__c/fields/UniqueEntry__Trigger_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Trigger_Object_Label__c</fullName>
    <label>Trigger_Object_Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>